[package]
name = "cyber_psycho_city"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hangul_jaso = { path = "../hangul_jaso"}
jaso_sdl2 = { path = "../jaso_sdl2"}

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf", "image", "gfx", "mixer"]